--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "dependencies": {
+    "copy-webpack-plugin": "^5.0.4",
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^5.0.1",
     "cordova-plugin-browsersync": "^1.1.0",
@@ -23,6 +24,8 @@
     "phaser": "^3.20.1"
   },
   "devDependencies": {
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
