--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "devDependencies": {
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "cordova-plugin-whitelist": "^1.3.4"
+    "cordova-plugin-whitelist": "^1.3.4",
+    "file-loader": "^4.2.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-cordova-plugin": "^0.1.6"
   },
   "cordova": {
     "plugins": {
