--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "cordova-ios": "^4.5.5",
         "cordova-plugin-whitelist": "^1.3.3",
         "idiom.js": "^1.0.0",
+        "phaser": "^3.20.1",
         "phaser-ce": "^2.11.0",
         "webfontloader": "^1.6.28"
     },
