--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
     "browser": true
   },
   "rules": {
-    "import/no-unresolved": [2]
+    "import/no-unresolved": [2],
+      "semi": 0
   },
   "globals": {
     "phaser": true
