--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
         "copy-webpack-plugin": "^4.4.1",
         "cordova": "^8.0.0",
         "eslint": "^4.17.0",
+        "eslint-config-prettier": "^6.5.0",
         "eslint-config-standard": "^10.2.1",
         "eslint-plugin-import": "^2.8.0",
         "eslint-plugin-node": "^6.0.0",
+        "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-promise": "^3.6.0",
         "eslint-plugin-standard": "^3.0.1",
         "expose-loader": "^0.7.4",
         "html-webpack-plugin": "^2.30.1",
+        "prettier": "1.18.2",
         "webpack": "^3.11.0",
         "workbox-webpack-plugin": "^3.6.2"
     },
