--- a/package.json
+++ b/package.json
@@ -34,19 +34,19 @@
         "workbox-webpack-plugin": "^3.6.2"
     },
     "dependencies": {
-        "cordova-android": "^7.1.1",
-        "cordova-browser": "^5.0.4",
         "cordova-ios": "^4.5.5",
         "cordova-plugin-whitelist": "^1.3.3",
         "idiom.js": "^1.0.0",
         "phaser": "^3.20.1",
-        "webfontloader": "^1.6.28"
+        "webfontloader": "^1.6.28",
+        "cordova-android": "^7.0.0",
+        "cordova-browser": "^5.0.2"
     },
     "cordova": {
         "platforms": [
+            "ios",
             "android",
-            "browser",
-            "ios"
+            "browser"
         ],
         "plugins": {
             "cordova-plugin-whitelist": {}
