--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "babel-core": "^6.26.0",
+        "@babel/core": "^7.7.5",
+        "@babel/preset-env": "^7.7.6",
+        "babel-core": "^7.0.0-0",
         "babel-eslint": "^8.2.1",
-        "babel-loader": "^7.1.2",
+        "babel-loader": "^7.1.5",
         "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
         "browser-sync": "^2.24.7",
         "browser-sync-webpack-plugin": "^2.0.1",
         "clean-webpack-plugin": "^0.1.18",
@@ -33,7 +34,7 @@
         "expose-loader": "^0.7.4",
         "html-webpack-plugin": "^2.30.1",
         "prettier": "1.18.2",
-        "webpack": "^3.11.0",
+        "webpack": "^3.12.0",
         "workbox-webpack-plugin": "^3.6.2"
     },
     "dependencies": {
